# napari-phasor

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_phasor/: _widget.py  napari.yaml  venv_req.txt
src/napari_phasor/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
