[metadata]
name = napari-phasor
version = 0.0.1
author = Bruno Schuty
author_email = schutyteske@gmail.com
url = https://github.com/ubaimaging/napari-phasor
license = MIT
description = This napari plugin allows to obten a phasor image from spectral images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/ubaimaging/napari-phasor/issues
    Documentation = https://github.com/ubaimaging/napari-phasor#README.md
    Source Code = https://github.com/ubaimaging/napari-phasor
    User Support = https://github.com/ubaimaging/napari-phasor/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-phasor = napari_phasor:napari.yaml
